results/SVCOMP/specgen/log-ExSymExeLCMP-2024_03_07_01_45_00.txt
class Main {

  //@ requires Long.MIN_VALUE <= x && x <= Long.MAX_VALUE && y == 5;
  //@ ensures \result <==> x + 1 <= x + 2;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires Long.MIN_VALUE <= x && x <= Long.MAX_VALUE && Long.MIN_VALUE <= y && y <= Long.MAX_VALUE;
  //@ ensures \result <==> x + 1 <= x + 2;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:3: error: cannot find symbol
  //@ requires Long.MIN_VALUE <= x && x <= Long.MAX_VALUE && y == 5;
                                                             ^
  symbol:   variable y
  location: class Main
1 error

class Main {

  //@ requires Long.MIN_VALUE <= x && x <= Long.MAX_VALUE;
  //@ ensures \result <==> x + 1 <= x + 2;
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ requires Long.MIN_VALUE <= x && x <= Long.MAX_VALUE && y == 5;
  //@ ensures \result <==> x + 1 <= x + 2;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}

